# HBA

./: CMakeLists.txt
include/: ba.hpp  hba.hpp  mypcl.hpp  project.h  reproject_img_pts.h  tools.hpp
launch/: hba.launch  odom2posegraph.launch  offine_project.launch  project_points2img_offine.launch  project_pts_and_img.launch  visualize.launch
rviz_cfg/: camera_sim.yaml  camera_v1_avia_hk.yaml  camera_v2_vel2cam_vanjee_hk.yaml  debug.rviz  rgb_debug.rviz  rosbag.rviz
source/: get_camera_pose.cpp  get_lidar_intensity_image.cpp  hba.cpp  odom2posegraph.cpp  odom2posegraph_keyframe.cpp  project.cpp  project_points2img_offine.cpp  reproject_img_pts.cpp  shadow_filter.cpp  visualize.cpp
